--- a/debian/dkms.conf
+++ b/debian/dkms.conf
@@ -1,11 +1,13 @@
 PACKAGE_NAME="nvidia-96"
-PACKAGE_VERSION="96.43.18"
+PACKAGE_VERSION="96.43.19"
 CLEAN="make clean"
 BUILT_MODULE_NAME[0]="nvidia"
 DEST_MODULE_NAME[0]="nvidia-96"
 MAKE[0]="make module KERNDIR=/lib/modules/$kernelver IGNORE_XEN_PRESENCE=1 IGNORE_CC_MISMATCH=1 SYSSRC=$kernel_source_dir"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/char/drm"
 AUTOINSTALL="yes"
+PATCH[0]="nvidia-2.6.36-ioctl.patch"
+PATCH_MATCH[0]="^2.6.3[67]"
 #PATCH[0]="fall_back_on_mtrr_if_no_pat.patch"
 #PATCH_MATCH[0]="2.6.31"
 #PATCH[1]="nvidia-rt-compat-legacy.patch"
