Call dpkg-trigger with --by-package=$PACKAGE_NAME in prerm

--- a/debian/nvidia-96.prerm.in
+++ b/debian/nvidia-96.prerm.in
@@ -25,7 +25,7 @@ case "$1" in
 		update-alternatives --remove gl_conf #LDSOCONF#
 
 		# Trigger gmenu so as to update the gnome menu
-		dpkg-trigger gmenucache || true
+		dpkg-trigger --by-package=$PACKAGE_NAME gmenucache || true
 
 		# explicit ldconfig due to alternatives
 		ldconfig
