Add support for blacklisting card ids from GRUB gfxpayload=keep
In Natty gfxpayload=keep is set by default so as to provide a framebuffer
early in the boot process. Some cards don't play nicely with it, therefore
we need to blacklist them in a file. The format is a sequence of lines of
the following form:
  vVENDORdDEVICEsvSUBVENDORsdSUBDEVICEbcBASECLASSscSUBCLASS

Blacklist lines are regex-matched against a corresponding PCI ID string.
In practice this means that you can replace any part of the ID string
with .* to match anything.

Note: The blacklist only works in Natty, where the "grub-gfxpayload-lists"
package is available. It has no effect whatsoever in previous Ubuntu
releases.

--- a/debian/nvidia-96.dirs.in
+++ b/debian/nvidia-96.dirs.in
@@ -14,6 +14,7 @@
 #MANDIR#
 #DATADIR#/pixmaps
 /usr/share/lintian/overrides
+/usr/share/grub-gfxpayload-lists/blacklist
 #PKGDRIVERSDIR#
 #NVIDIAEXTENSION#
 /usr/src/#DRIVERNAME#-#VERSION#
