Make sure that all of the libraries are removed in the postrm
This should work around cases such as LP: #540143 where some
misteriously unremoved links cause the directory removal to
fail.

--- a/debian/nvidia-96.postrm.in
+++ b/debian/nvidia-96.postrm.in
@@ -21,7 +21,10 @@ set -e
 
 case "$1" in
     remove|purge)
-
+        # This should make sure that #PKGLIBDIR# and
+        # #PKGLIBDIR32# are removed even if some
+        # links are left. See LP: #540143
+        rm -Rf #PKGLIBDIR# #PKGLIBDIR32#
     ;;
     
     upgrade|failed-upgrade|abort-install|abort-upgrade|disappear)
