--- a/debian/dkms.conf.in
+++ b/debian/dkms.conf.in
@@ -8,8 +8,8 @@ DEST_MODULE_NAME[0]="#MODULENAME#"
 MAKE[0]="make module KERNDIR=/lib/modules/$kernelver IGNORE_XEN_PRESENCE=1 IGNORE_CC_MISMATCH=1 SYSSRC=$kernel_source_dir"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/char/drm"
 AUTOINSTALL="yes"
-PATCH[0]="nvidia-2.6.36-ioctl.patch"
-PATCH_MATCH[0]="^2.6.3[67]"
+#PATCH[0]="nvidia-2.6.36-ioctl.patch"
+#PATCH_MATCH[0]="^2.6.3[67]"
 #PATCH[0]="fall_back_on_mtrr_if_no_pat.patch"
 #PATCH_MATCH[0]="2.6.31"
 #PATCH[1]="nvidia-rt-compat-legacy.patch"
