--- a/debian/nvidia-autostart.desktop
+++ b/debian/nvidia-autostart.desktop
@@ -5,5 +5,5 @@ Name=NVIDIA X Server Settings
 Comment=Configure NVIDIA X Server Settings
 Exec=sh -c '/usr/bin/nvidia-settings --load-config-only'
 Terminal=false
-Icon=nvidia-96-settings
+Icon=nvidia-96-updates-settings
 Categories=System;Settings;
