--- a/debian/ubuntu-nvidia-settings.desktop
+++ b/debian/ubuntu-nvidia-settings.desktop
@@ -4,5 +4,5 @@ Encoding=UTF-8
 Name=NVIDIA X Server Settings
 Comment=Configure NVIDIA X Server Settings
 Exec=/usr/bin/nvidia-settings
-Icon=nvidia-96-settings
+Icon=nvidia-96-updates-settings
 Categories=System;Settings;
