--- a/debian/nvidia-96.dirs.in
+++ b/debian/nvidia-96.dirs.in
@@ -9,6 +9,7 @@
 #PKGLIBDIR32#
 /usr/lib/xorg/modules/drivers
 /usr/lib/xorg/modules/extensions
+#XORGEXTRAPATH#
 #PKGDATADIR#
 #PKGDESKDIR#
 #MANDIR#
