--- a/debian/dkms.conf
+++ b/debian/dkms.conf
@@ -4,7 +4,7 @@ PACKAGE_VERSION="96.43.20"
 OBSOLETE_BY=3.1
 CLEAN="make clean"
 BUILT_MODULE_NAME[0]="nvidia"
-DEST_MODULE_NAME[0]="nvidia-96-updates"
+DEST_MODULE_NAME[0]="nvidia_96_updates"
 MAKE[0]="make module KERNDIR=/lib/modules/$kernelver IGNORE_XEN_PRESENCE=1 IGNORE_CC_MISMATCH=1 SYSSRC=$kernel_source_dir"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/char/drm"
 AUTOINSTALL="yes"
